--- a/pom.xml
+++ b/pom.xml
@@ -24,4 +24,24 @@
             <version>20141113</version>
         </dependency>
     </dependencies>
+
+
+    <build>
+       <plugins>
+         <plugin>
+           <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>install</phase>
+                <goals>
+                  <goal>copy-dependencies</goal>
+                </goals>
+                <configuration>
+                  <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                </configuration>
+              </execution>
+           </executions>
+         </plugin>
+       </plugins>
+    </build>
 </project>
